--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,24 @@ repositories {
 }
 
 dependencies {
+	// spring & jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'mysql:mysql-connector-java'
+
+	// lombok
 	annotationProcessor 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	// mysql
+	runtimeOnly 'mysql:mysql-connector-java'
+
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+	// webflux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
