--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,37 +1,5 @@
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/palette_auth
-    username: dbuser
-    password: dbuser1234
-  jpa:
-    show-sql: true
-    hibernate.ddl-auto: update
-    properties.hibernate.format_sql: true
-
-# Logging
-logging.level.org.springframework.web: DEBUG
-
-# Cookie
-cookie:
-  properties:
-    domain: http://localhost:8080
-
-security:
-  jwt:
-    access-token:
-      secret-key: test
-      expire-length: 300000
-    refresh-token:
-      secret-key: test
-      expire-length: 3600000
-
-google:
-  client:
-    id: 1083383014162-l4rm9956ah9u94g6r0p7imjavdsvevfp.apps.googleusercontent.com
-    secret: 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
-    redirect-uri: http://localhost:8080/google/callback
-    grant-type: authorization_code
-  url:
-    access-token: https://oauth2.googleapis.com/token
-    profile: https://www.googleapis.com/oauth2/v2/userinfo
+  profiles:
+    default: dev
+    group:
+      dev: dev
