fix: 파라미터 스토어 연동 네이밍 규칙 수정 (#4)

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -34,8 +34,8 @@ aws:
   paramstore:
     enabled: false
     prefix: /config
-    profile-separator: _
-    name: application
+    profile-separator: '-'
+    name: app-palette
     fail-fast: false
 
 google:
