--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,13 +1,13 @@
 spring:
   config:
     activate:
-      on-profile: dev
+      on-profile: local
     import: 'aws-parameterstore:'
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql8:3306/palette
-    username: palette
-    password: 1q2w3e4r1!
+    url: jdbc:mysql://localhost:3306/palette_auth
+    username: dbuser
+    password: dbuser1234
   jpa:
     show-sql: true
     hibernate.ddl-auto: update
@@ -33,3 +33,4 @@ aws:
     profile-separator: '-'
     name: app-palette
     fail-fast: true
+
