Etc: github actions cicd 구축 (#7)

--- a/.github/.workflows/build-push.yml
+++ b/.github/.workflows/build-push.yml
@@ -2,10 +2,10 @@
 name: 'build-push'
 
 on:
-  push:
-    branches: [ "develop" ]
-#  pull_request:
+#  push:
 #    branches: [ "develop" ]
+  pull_request:
+    branches: [ "develop" ]
 
 jobs:
   build:
