--- a/.github/.workflows/build-push.yml
+++ b/.github/.workflows/build-push.yml
@@ -2,8 +2,8 @@
 name: 'build-push'
 
 on:
-#  push:
-#    branches: [ "develop" ]
+  push:
+    branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
 
